Whitespace fix for mobile Safari.

--- a/chatbox/css/style.css
+++ b/chatbox/css/style.css
@@ -505,3 +505,9 @@
   text-decoration: none;
   color: #777;
 }
+
+#livelychatsupport-chatbox audio {
+	display: none !important;
+	height: 0px !important;
+	width: 0px !important;
+}
